# FinStoch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: cd.yml  ci.yml  python-package.yml
FinStoch/: __init__.py
FinStoch/bootstrap/: __init__.py  monte_carlo.py
FinStoch/metrics/: __init__.py  cvar.py  drawdown.py  entropy.py  kurtosis.py  returns.py  sharpe.py  skewness.py  sortino.py  var.py  vol.py
FinStoch/multi_asset/: __init__.py  correlated_gbm.py
FinStoch/processes/: __init__.py  base.py  bates.py  cev.py  cir.py  gbm.py  heston.py  merton.py  ou.py  variance_gamma.py  vasicek.py
FinStoch/utils/: plotting.py  random.py  timesteps.py
metrics/: __init__.py  cvar.py  var.py
processes/: __init__.py  bates.py  cev.py  cir.py  gbm.py  heston.py  hw.py  merton.py  ou.py
tests/: analytics_test.py  antithetic_test.py  bates_test.py  bootstrap_test.py  business_days_test.py  calibrate_test.py  cev_test.py  cir_test.py  cvar_test.py  drawdown_test.py  exact_test.py  gbm_test.py  heston_test.py  merton_test.py  milstein_test.py  multi_asset_test.py  ou_test.py  returns_test.py  seed_test.py  var_test.py  variance_gamma_test.py  vasicek_test.py  vol_test.py
utils/: plotting.py  random.py  timesteps.py
